--- a/templates/commits.html
+++ b/templates/commits.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Graphique des Commits thomloy :</title>
+    <title>Graphique des Commits zemmama :</title>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 </head>
 <body>
